--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <p>Git + Github</p>
+    <p>Git + Github + lab</p>
 </body>
 </html>
